# tripwired

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  package.json  pnpm-lock.yaml  readme.md  tripwired.example.toml  tsconfig.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: design.md  llm-safety-brain-benchmark.md  specification.md
kernel/: Cargo.toml
kernel/src/: audit.rs  filter.rs  llm.rs  main.rs
src/: index.ts
src/activity-engine/: engine.test.ts  engine.ts
src/core/: contracts.test.ts  contracts.ts  index.ts  types.ts
src/execution/: adapter.test.ts  adapter.ts  index.ts
src/intent-core/: core.test.ts  core.ts
src/monitoring/: drift-monitor.test.ts  drift-monitor.ts  index.ts  types.ts
src/runtime/: file-logger.test.ts  file-logger.ts  index.ts  pipeline.test.ts  pipeline.ts
src/safety-gate/: engine.test.ts  engine.ts
