[package]
name = "tripwire-kernel"
version = "0.1.1"
edition = "2021"
description = "Deterministic kill-switch kernel for autonomous agents"
license = "Apache-2.0"
repository = "https://github.com/cluster-127/tripwired"

[[bin]]
name = "tripwired"
path = "src/main.rs"

[dependencies]
# Async runtime with Named Pipe support
tokio = { version = "1", features = ["full", "net"] }

# HTTP client - keep default TLS for compatibility
reqwest = { version = "0.12", features = ["json"] }

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Regex for pre-filtering (pre-compiled)
regex = "1"

# CLI arguments
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
tempfile = "3"
